# kool-cpp-tools

./: .gitignore  CMakeLists.txt  README.md
install/: CMakeLists.txt  files-list.cmake
install/headers/: align.hpp  bitwise.hpp  byte.hpp  c_array.hpp  debug.hpp  endian.hpp  ioreg.hpp  log2.hpp  pow2.hpp  range.hpp  sequence.hpp  traits.hpp  util.hpp
install/headers/allocators/: beefy.hpp  fat_and_fast.hpp
install/headers/io/: out.hpp  out_str_and_int.hpp
install/headers/io/common/: builtin.hpp  conversion.hpp  conversion_table.hpp  fmt.hpp
install/headers/io/printf/: str_and_int.hpp
install/headers/iofmt/: out_str_and_int.hpp
install/headers/iofmt/common/: builtin.hpp  conversion.hpp  fmt.hpp
install/headers/prints/: fmt.hpp  print.hpp  printf_light.hpp
install/include/kcppt/: align.hpp  bitset.hpp  bitwise.hpp  byte.hpp  c_array.hpp  c_array_nd.hpp  c_file.hpp  c_string.hpp  contiguous_array.hpp  debug.hpp  endian.hpp  functional.hpp  headers.cmake  ioreg.hpp  log2.hpp  loop_if.hpp  loop_switch.hpp  mathrel.hpp  pow2.hpp  range.hpp  rate.hpp  regular_obj.hpp  sequence.hpp  smart_enum.hpp  std_array_nd.hpp  traits.hpp
install/include/kcppt/allocators/: beefy.hpp
install/include/kcppt/img/filt/: max_filt.hpp
install/include/kcppt/img/morph/: bin_struct.hpp
install/include/kcppt/iofmt/: out_str_and_int.hpp
install/include/kcppt/iofmt/common/: builtin.hpp  conversion_table.hpp  fmt.hpp
install/include/kcppt/iofmt/printf/: str_and_int.hpp
install/include/kcppt/serial/: serial.hpp
install/include/kcppt/serial/port/: unix.hpp  win32.hpp
install/include/kcppt/traits/: array.hpp  numeric.hpp  string.hpp
tests/: CMakeLists.txt  toolchain_options.cmake
tests/src/: main.cpp
tests/src/allocators/beefy/: beefy.cpp
tests/src/ascii/: ascii.cpp
tests/src/byte/: byte.cpp
tests/src/c_string/: c_string.cpp
tests/src/contiguous_array/: contiguous_array.cpp
tests/src/functional/: functional.cpp
tests/src/img/filt/: max_filt.cpp
tests/src/img/morph/: bin_struct.cpp
tests/src/ioreg/: bank.cpp  single.cpp
tests/src/log2/: log2.cpp
tests/src/loop_if/: loop_if.cpp
tests/src/pow2/: pow2.cpp
tests/src/rate/: rate.cpp
tests/src/serial/: serial_avr8.cpp  serial_unix.cpp  serial_win32.cpp
tests/src/smart_enum/: smart_enum.cpp
